--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" URL="www.rffjnjdededkf4fjd.com">
+    <meta charset="utf-8">
     <title>My Blog</title>
     <link rel="stylesheet" href="indexcss.css"/>
   </head>
