--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             I would not have believed them.</p>
             <p>Just a few days later, I came across <a href="https:getmimo.com">Mimo</a>
             and started to work on a <em>real</em> blog.</p>
+            <p>Hope this works.</p>
           </div>
         </div>
       </div>
